fixed spacing

--- a/static/bnSubmission/styles/style.css
+++ b/static/bnSubmission/styles/style.css
@@ -95,6 +95,6 @@
 #bandname-submit {
     margin-left: 0px !important;
     margin-right: 0px !important;
-    margin-top: 5px !important;
+    margin-top: -20px !important;
     margin-bottom: 0px !important;   
 }
